--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "sc-hierarchical-dropdown",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A reusable hierarchical dropdown component for React applications",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c",
     "prepare": "npm run build"
   },
   "files": [
     "dist",
+    "dist/styles.css",
     "README.md"
   ],
   "keywords": [
@@ -21,12 +23,17 @@
     "select"
   ],
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": ">=15.0.0",
+    "react-dom": ">=15.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "typescript": "^5.0.0"
+    "rollup": "^4.44.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "^5.8.3"
   }
 }
